--- a/bizconsult/webApp/templates/bizconsult/base/base.html
+++ b/bizconsult/webApp/templates/bizconsult/base/base.html
@@ -48,7 +48,7 @@
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="m-0">BizConsult</h1>
+                    <h1 class="m-0">{{ site_info.name_site }}</h1>
                     <!-- <img src="{% static 'bizconsult/img/logo.png' %}" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -56,9 +56,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="{% url 'index' %}" class="nav-item nav-link {% if request.path == '/about' %} active {% endif %}">Home</a>
-                        <a href="{% url 'about' %}" class="nav-item nav-link {% if request.path == '/about' %} active {% endif %}">About</a>
-                        <a href="{% url 'service' %}" class="nav-item nav-link {% if request.path == '/about' %} active {% endif %}">Service</a>
+                        <a href="{% url 'index' %}" class="nav-item nav-link {% if request.path == '/' %} active {% endif %}">Home</a>
+                        <a href="{% url 'about' %}" class="nav-item nav-link {% if request.path == '/about/' %} active {% endif %}">About</a>
+                        <a href="{% url 'service' %}" class="nav-item nav-link {% if request.path == '/service/' %} active {% endif %}">Service</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
@@ -69,7 +69,7 @@
                                 <a href="{% url '404' %}" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="{% url 'contact' %}" class="nav-item nav-link {% if request.path == '/about' %} active {% endif %}">Contact</a>
+                        <a href="{% url 'contact' %}" class="nav-item nav-link {% if request.path == '/contact/' %} active {% endif %}">Contact</a>
                     </div>
                     <a href="{% url 'quote' %}" class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Free Quote</a>
                 </div>
@@ -79,8 +79,8 @@
                 <div class="container">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated zoomIn">We Help To Push Your Business To The Top Level</h1>
-                            <p class="text-white pb-3 animated zoomIn">Tempor rebum no at dolore lorem clita rebum rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam sit justo amet ipsum vero ipsum clita lorem</p>
+                            <h1 class="text-white mb-4 animated zoomIn">{{ banner.title_banner }}</h1>
+                            <p class="text-white pb-3 animated zoomIn">{{ banner.description_banner }}</p>
                             <a href="" class="btn btn-outline-light rounded-pill border-2 py-3 px-5 animated slideInRight">Learn More</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
@@ -102,9 +102,9 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Get In Touch</h5>
-                        <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p><i class="fa fa-map-marker-alt me-3"></i>{{ site_info.address_site }}</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>{{ site_info.phone_site }}</p>
+                        <p><i class="fa fa-envelope me-3"></i>{{ site_info.email_site }}</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -115,8 +115,8 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="text-white mb-4">Quick Link</h5>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
+                        <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
+                        <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
                         <a class="btn btn-link" href="">Privacy Policy</a>
                         <a class="btn btn-link" href="">Terms & Condition</a>
                         <a class="btn btn-link" href="">Career</a>
@@ -143,7 +143,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">{{ site_info.name_site }}</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
