--- a/bizconsult/webApp/templates/bizconsult/index.html
+++ b/bizconsult/webApp/templates/bizconsult/index.html
@@ -331,54 +331,20 @@
             <h2 class="mb-5">Meet Our Team Members</h2>
         </div>
         <div class="row g-4">
+        {% for teams  in team %}
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item">
-                    <h5>Full Name</h5>
-                    <p class="mb-4">Designation</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="{% static 'bizconsult/img/team-1.jpg' %}" alt="">
+                    <h5>{{ teams.name_team }} & {{ teams.last_name_team }}</h5>
+                    <p class="mb-4">{{ teams.job_team }}</p>
+                    <img class="img-fluid rounded-circle w-100 mb-4" src="{{{ teams.image_team.url }}" alt="">
                     <div class="d-flex justify-content-center">
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square text-primary bg-white m-1" href="{{ teams.reseau_social }}"><i class="fab fa-facebook-f"></i></a>
+                       <!--<a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>--> 
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="team-item">
-                    <h5>Full Name</h5>
-                    <p class="mb-4">Designation</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="{% static 'bizconsult/img/team-2.jpg' %}" alt="">
-                    <div class="d-flex justify-content-center">
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="team-item">
-                    <h5>Full Name</h5>
-                    <p class="mb-4">Designation</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="{% static 'bizconsult/img/team-3.jpg' %}" alt="">
-                    <div class="d-flex justify-content-center">
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-                <div class="team-item">
-                    <h5>Full Name</h5>
-                    <p class="mb-4">Designation</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="{% static 'bizconsult/img/team-4.jpg' %}" alt="">
-                    <div class="d-flex justify-content-center">
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
+        {% endfor %}
         </div>
     </div>
 </div>
