--- a/bizconsult/webApp/templates/bizconsult/index.html
+++ b/bizconsult/webApp/templates/bizconsult/index.html
@@ -70,102 +70,24 @@
             <h2 class="mb-5">We Provide Solutions On Your Business</h2>
         </div>
         <div class="row g-4">
+            {% for services in service %}
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded h-100">
                     <div class="d-flex justify-content-between">
                         <div class="service-icon">
-                            <i class="fa fa-user-tie fa-2x"></i>
+                            <i class="{{ services.icon_service }} fa-2x"></i>
                         </div>
                         <a class="service-btn" href="">
                             <i class="fa fa-link fa-2x"></i>
                         </a>
                     </div>
                     <div class="p-5">
-                        <h5 class="mb-3">Business Research</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
+                        <h5 class="mb-3">{{ services.title_service }}</h5>
+                        <span>{{ services.description_service }}</span>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="service-item rounded h-100">
-                    <div class="d-flex justify-content-between">
-                        <div class="service-icon">
-                            <i class="fa fa-chart-pie fa-2x"></i>
-                        </div>
-                        <a class="service-btn" href="">
-                            <i class="fa fa-link fa-2x"></i>
-                        </a>
-                    </div>
-                    <div class="p-5">
-                        <h5 class="mb-3">Stretagic Planning</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="service-item rounded h-100">
-                    <div class="d-flex justify-content-between">
-                        <div class="service-icon">
-                            <i class="fa fa-chart-line fa-2x"></i>
-                        </div>
-                        <a class="service-btn" href="">
-                            <i class="fa fa-link fa-2x"></i>
-                        </a>
-                    </div>
-                    <div class="p-5">
-                        <h5 class="mb-3">Market Analysis</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="service-item rounded h-100">
-                    <div class="d-flex justify-content-between">
-                        <div class="service-icon">
-                            <i class="fa fa-chart-area fa-2x"></i>
-                        </div>
-                        <a class="service-btn" href="">
-                            <i class="fa fa-link fa-2x"></i>
-                        </a>
-                    </div>
-                    <div class="p-5">
-                        <h5 class="mb-3">Financial Analaysis</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="service-item rounded h-100">
-                    <div class="d-flex justify-content-between">
-                        <div class="service-icon">
-                            <i class="fa fa-balance-scale fa-2x"></i>
-                        </div>
-                        <a class="service-btn" href="">
-                            <i class="fa fa-link fa-2x"></i>
-                        </a>
-                    </div>
-                    <div class="p-5">
-                        <h5 class="mb-3">legal Advisory</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="service-item rounded h-100">
-                    <div class="d-flex justify-content-between">
-                        <div class="service-icon">
-                            <i class="fa fa-house-damage fa-2x"></i>
-                        </div>
-                        <a class="service-btn" href="">
-                            <i class="fa fa-link fa-2x"></i>
-                        </a>
-                    </div>
-                    <div class="p-5">
-                        <h5 class="mb-3">Tax & Insurance</h5>
-                        <span>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet lorem.</span>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
@@ -178,67 +100,25 @@
         <div class="row g-5">
             <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">Features</div>
-                <h2 class="mb-4">Why People Choose Us? We Are Trusted & Award Wining Agency</h2>
-                <p>Clita nonumy sanctus nonumy et clita tempor, et sea amet ut et sadipscing rebum amet takimata amet, sed accusam eos eos dolores dolore et. Et ea ea dolor rebum invidunt clita eos. Sea accusam stet stet ipsum, sit ipsum et ipsum kasd</p>
-                <p>Et ea ea dolor rebum invidunt clita eos. Sea accusam stet stet ipsum, sit ipsum et ipsum kasd</p>
+                <h2 class="mb-4">{{ feature.label_feature }}</h2>
+                <p>{{ feature.description }}</p>
+                
                 <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Read More</a>
             </div>
             <div class="col-lg-7">
                 <div class="row g-5">
+                    {% for potentialite in potentialites %}
                     <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                         <div class="d-flex align-items-center mb-3">
                             <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-cubes text-white"></i>
+                                <i class="{{ potentialite.Icon }} text-white"></i>
                             </div>
-                            <h6 class="mb-0">Best In Industry</h6>
+                            <h6 class="mb-0">{{ potentialite.title }}</h6>
                         </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
+                        <span>{{ potentialite.description }}</span>
                     </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.2s">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-percent text-white"></i>
-                            </div>
-                            <h6 class="mb-0">99% Success Rate</h6>
-                        </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
-                    </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-award text-white"></i>
-                            </div>
-                            <h6 class="mb-0">Award Winning</h6>
-                        </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
-                    </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-smile-beam text-white"></i>
-                            </div>
-                            <h6 class="mb-0">100% Happy Client</h6>
-                        </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
-                    </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-user-tie text-white"></i>
-                            </div>
-                            <h6 class="mb-0">Professional Advisors</h6>
-                        </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
-                    </div>
-                    <div class="col-sm-6 wow fadeIn" data-wow-delay="0.6s">
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle me-3">
-                                <i class="fa fa-headset text-white"></i>
-                            </div>
-                            <h6 class="mb-0">24/7 Customer Support</h6>
-                        </div>
-                        <span>Magna sea eos sit dolor, ipsum amet ipsum lorem diam eos diam dolor</span>
-                    </div>
+                    {% endfor %}
+                    
                 </div>
             </div>
         </div>
@@ -273,50 +153,19 @@
             <h2 class="mb-5">What Our Clients Say!</h2>
         </div>
         <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
+            {% for testimonial in testimonials %}
             <div class="testimonial-item rounded p-4">
                 <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
+                <p>{{ testimonial.comment_Testimonial }}</p>
                 <div class="d-flex align-items-center">
-                    <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'bizconsult/img/testimonial-1.jpg' %}">
+                    <img class="img-fluid flex-shrink-0 rounded-circle" src="{{ testimonial.image_Testimonial.url }}">
                     <div class="ps-3">
-                        <h6 class="mb-1">Client Name</h6>
-                        <small>Profession</small>
+                        <h6 class="mb-1">{{ testimonials.name_Testimonial }}</h6>
+                        <small>{{ testimonial.works_Testimonial }}</small>
                     </div>
                 </div>
             </div>
-            <div class="testimonial-item rounded p-4">
-                <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                <div class="d-flex align-items-center">
-                    <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'bizconsult/img/testimonial-2.jpg' %}">
-                    <div class="ps-3">
-                        <h6 class="mb-1">Client Name</h6>
-                        <small>Profession</small>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item rounded p-4">
-                <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                <div class="d-flex align-items-center">
-                    <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'bizconsult/img/testimonial-3.jpg' %}">
-                    <div class="ps-3">
-                        <h6 class="mb-1">Client Name</h6>
-                        <small>Profession</small>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item rounded p-4">
-                <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
-                <p>Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</p>
-                <div class="d-flex align-items-center">
-                    <img class="img-fluid flex-shrink-0 rounded-circle" src="{% static 'bizconsult/img/testimonial-4.jpg' %}">
-                    <div class="ps-3">
-                        <h6 class="mb-1">Client Name</h6>
-                        <small>Profession</small>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
@@ -336,9 +185,13 @@
                 <div class="team-item">
                     <h5>{{ teams.name_team }} & {{ teams.last_name_team }}</h5>
                     <p class="mb-4">{{ teams.job_team }}</p>
-                    <img class="img-fluid rounded-circle w-100 mb-4" src="{{{ teams.image_team.url }}" alt="">
+                    <img class="img-fluid rounded-circle w-100 mb-4" src="{{ teams.image_team.url }}" alt="">
                     <div class="d-flex justify-content-center">
-                        <a class="btn btn-square text-primary bg-white m-1" href="{{ teams.reseau_social }}"><i class="fab fa-facebook-f"></i></a>
+                        {% for net in teams.userTeamSocial.all %}
+                        
+                        <a class="btn btn-square text-primary bg-white m-1" href="{{ net.link }}"><i class="{{ net.icon }}"></i></a>
+                              
+                        {% endfor %}
                        <!--<a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square text-primary bg-white m-1" href=""><i class="fab fa-linkedin-in"></i></a>--> 
                     </div>
