documentation de  mon api avec swagger,redoc

--- a/bizconsult/webApp/templates/bizconsult/about.html
+++ b/bizconsult/webApp/templates/bizconsult/about.html
@@ -1,7 +1,7 @@
-{% extends 'bizconsult/base/base.html' %}
+{% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
         <!-- About Start -->
         <div class="container-xxl py-6">
             <div class="container">
@@ -177,4 +177,4 @@
         </div>
         <!-- Team End -->
         
-{% endblock 'main' %}
+{% endblock 'main1' %}
