--- a/bizconsult/webApp/templates/bizconsult/base/nava.html
+++ b/bizconsult/webApp/templates/bizconsult/base/nava.html
@@ -91,8 +91,7 @@
             </div>
         </div>
         <!-- Navbar & Hero End -->
-        {% block 'main' %}
-        {% endblock 'main' %}
+        {% block 'main1' %}{% endblock 'main1' %}
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
             <div class="container py-5">
