--- a/bizconsult/webApp/templates/bizconsult/feature.html
+++ b/bizconsult/webApp/templates/bizconsult/feature.html
@@ -1,7 +1,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 <!-- Features Start -->
 <div class="container-xxl py-6">
     <div class="container">
@@ -75,5 +75,5 @@
     </div>
 </div>
 <!-- Features End -->
-{% endblock 'main' %}
+{% endblock 'main1' %}
 
