--- a/bizconsult/webApp/templates/bizconsult/quote.html
+++ b/bizconsult/webApp/templates/bizconsult/quote.html
@@ -1,7 +1,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 <!-- Quote Start -->
 <div class="container-xxl py-6">
     <div class="container">
@@ -52,4 +52,4 @@
 </div>
 <!-- Quote End -->
 
-{% endblock 'main' %}
+{% endblock 'main1' %}
