--- a/bizconsult/webApp/templates/bizconsult/service.html
+++ b/bizconsult/webApp/templates/bizconsult/service.html
@@ -1,7 +1,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 
 <!-- Service Start -->
 <div class="container-xxl py-6">
@@ -170,4 +170,4 @@
 </div>
 <!-- Testimonial End -->
 
-{% endblock 'main' %}
+{% endblock 'main1' %}
