--- a/bizconsult/webApp/templates/bizconsult/team.html
+++ b/bizconsult/webApp/templates/bizconsult/team.html
@@ -2,7 +2,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 <!-- Team Start -->
 <div class="container-xxl py-6">
     <div class="container">
@@ -111,4 +111,4 @@
     </div>
 </div>
 <!-- Team End -->
-{% endblock 'main' %}
+{% endblock 'main1' %}
