--- a/bizconsult/webApp/templates/bizconsult/testimonial.html
+++ b/bizconsult/webApp/templates/bizconsult/testimonial.html
@@ -1,7 +1,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 
 
 <!-- Testimonial Start -->
@@ -60,4 +60,4 @@
     </div>
 </div>
 <!-- Testimonial End -->
-{% endblock 'main' %}
+{% endblock 'main1' %}
