--- a/bizconsult/webApp/templates/bizconsult/contact.html
+++ b/bizconsult/webApp/templates/bizconsult/contact.html
@@ -1,7 +1,7 @@
 {% extends 'bizconsult/base/nava.html' %}
 {% load static %}
 
-{% block 'main' %}
+{% block 'main1' %}
 
 <!-- Contact Start -->
 <div class="container-xxl py-6">
@@ -104,4 +104,4 @@
         }
     })
 </script>-->
-{% endblock 'main' %}
+{% endblock 'main1' %}
